[metadata]
name = Note Splitter
description = Splits notes in plaintext files (such as .md or .txt files) into multiple smaller files.
authors = Chris Wheeler, Shiva Ramezani, Christian Vargas, and Serge Nazaretyan
author_email = christopher.wheeler.320@my.csun.edu
license = GPL-3.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9
    Programming Language :: Python :: 3 :: 3.10

[options]
packages =
    note_splitter
python_requires = >=3.7
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=3.0
    tox>=3.24
