[metadata]
name = Note Splitter
description = Splits notes in plaintext files (such as .md or .txt files) into multiple smaller files.
authors = Chris Wheeler, Shiva Ramezani, Christian Vargas, and Serge Nazaretyan
author_email = mail@chriswheeler.dev
license = GPL-3.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.11

[options]
packages = .
python_requires = >=3.11
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.2.1
